Partial indexes should not be allowed as shard key

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.1.3
    • Affects Version/s: 3.1.1
    • Component/s: Index Maintenance
    • Fully Compatible
    • ALL
    • Hide
          var st = new ShardingTest({ shards: 2 }); 
      
          var testDB = st.s.getDB('test');
          testDB.dropDatabase();
          var testCol = testDB.getCollection('partialTest');
      
          testCol.ensureIndex({a:1},{b:{$exists:1}});
          testDB.adminCommand({ enablesharding: 'test' }); 
          assert.commandFailed(testDB.adminCommand({ shardcollection: 'test.partialTest', key: { a : 1 }}));
      
      Show
      var st = new ShardingTest({ shards: 2 }); var testDB = st.s.getDB( 'test' ); testDB.dropDatabase(); var testCol = testDB.getCollection( 'partialTest' ); testCol.ensureIndex({a:1},{b:{$exists:1}}); testDB.adminCommand({ enablesharding: 'test' }); assert .commandFailed(testDB.adminCommand({ shardcollection: 'test.partialTest' , key: { a : 1 }}));
    • Quint Iteration 3.1.2, Quint Iteration 3
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Partial indexes shouldn't be allowed to be used as the shard key.

            Assignee:
            J Rassi (Inactive)
            Reporter:
            Michael Grundy (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: