SERVER-17915 Partial indexes shouldn't be eligible as shard key index

- Adds new public method IndexDescriptor::isPartial().
- Replaces IndexCatalog::findIndexByPrefix() with
  IndexCatalog::findShardKeyPrefixedIndex().