src/mongo/db/index/index_descriptor.h
@@ -68,6 +68,7 @@ namespace mongo {
               _isIdIndex(isIdIndexPattern( _keyPattern )),
               _sparse(infoObj["sparse"].trueValue()),
               _unique( _isIdIndex || infoObj["unique"].trueValue() ),
+              _partial(!infoObj["filter"].eoo()),
               _cachedEntry( NULL )
         {
             _indexNamespace = makeIndexNamespace( _parentNS, _indexName );
@@ -125,6 +126,9 @@ namespace mongo {
 
         // Is this index sparse?
         bool isSparse() const { return _sparse; }
+
+        // Is this a partial index?
+        bool isPartial() const { return _partial; }
 
         // Is this index multikey?
         bool isMultikey( OperationContext* txn ) const {
@@ -200,6 +204,7 @@ namespace mongo {
         bool _isIdIndex;
         bool _sparse;
         bool _unique;
+        bool _partial;
         int _version;
 
         // only used by IndexCatalogEntryContainer to do caching for perf
